  - moved call-in.php3 -> call-in.php
  - moved cptmod.php3 -> modules/cpt_modifiers.module.php
  - moved patient_image_handler.php3 -> patient_image_handler.php
  - moved internal_service_types.php3 -> internal_service_types.module.php
  - added add() and mod() routines in lib/module_maintenance.php, so that
    maintenance modules can use them instead of reinventing the wheel

* Wed Dec 27 2000 rufustfirefly
  - started to convert Rx.php3 -> modules/prescription.module.php
  - modified EMR core module to check for access to current patient
  - set up stock del() function in maintenance module prototype instead of
    stub
  - removed db_maintenance_modules.php and folded into standard maint module

* Tue Dec 26 2000 rufustfirefly
  - updated README to suggest bware_cache and Zend Optimizer
  - added module listing of "Billing" category to billing_functions.php
  - moved show_appointments.php3 -> show_appointments.php
  - moved authenticate.php3 -> authenticate.php
  - moved import.php3 -> import.php
  - moved export.php3 -> export.php
  - moved user.php3 -> user.php
  - moved specialties.php3 -> specialties.php
  - moved manage_appointments.php3 -> manage_appointments.php
  - moved book_appointment.php3 -> book_appointment.php
  - created lib/ for all libraries
  - moved render_forms.inc -> lib/render_forms.php
  - moved iso-set.inc -> lib/iso-set.php
  - moved macros.inc -> lib/macros.php
  - moved language-loader.inc -> lib/language-loader.php
  - moved containers.inc -> lib/containers.php
  - moved module.php -> lib/module.php
  - moved module_maintenance.php -> lib/module_maintenance.php
  - moved freemed-calendar-functions.inc -> lib/calendar-functions.php
  - moved move_appointment.php3 -> move_appointment.php3
  - moved physician_day_view.php3 -> physician_day_view.php
  - moved physician_week_view.php3 -> physician_week_view.php
  - moved freemed-mail-functions.inc -> lib/mail-functions.php
  - moved freemed-functions.inc -> lib/API.php